# slack-secret

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  bump.sh  pyproject.toml
slack_secret/: __init__.py  channels.py  im.py  lib.py  main.py  users.py
tests/: test_slack_secret.py
