[tool.poetry]
name = "slack-secret"
version = "0.4.1"
description = "A tool to backup and delete the content of private slack channels"
authors = ["Nicolas Paris <ni.paris@gmail.com>"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = 'https://github.com/niparis/slack-secret'
homepage = 'https://github.com/niparis/slack-secret'
readme = 'README.rst'

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.46.0"
slackclient = "^2.6.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
slacksecrets = 'slack_secret.main:main'


[tool.isort]
line_length = 120
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
